themes/finna2/less/finna/navigation.less
/* ... */
.finna-navbar {
  .navbar-nav > li > a,
  .navbar-collapse.in .dropdown-menu a {
    color: @header-text-color;
    padding: 0 10px;
  }
}

// Menu position and menu carets
.navbar-nav > li > .dropdown-menu {
  margin-top: 0;
  .border-top-radius(@border-radius-base);
}

// Specified Finna styles for navbar
.nav.nav-absolute {
  position: absolute;
  margin:0;
  line-height: @navbar-height;
  top: 0px;
  right: 15px;
  flex-grow: 0;
  flex-shrink: 0;
  & .dropdown-menu > li > a {
    white-space: normal;
  }
}

@media (max-width: @screen-sm-max) {
  .nav.nav-absolute {
    right: @navbar-height;
  }
}

// Fix dropdowns in navbar for wide screen
@media (min-width: @screen-md-min) {
  .navbar .dropdown-menu > li > a {
    width: 280px;
    white-space: normal;
    transition: none;
  }
}

//Finna breadcrumbs
.breadcrumb {
  display: none;
  margin: 0px;
  margin-top: 15px;
  background-color: transparent;

  > li {
    background-color: @breadcrumb-bg;
    margin: 0px -2px;
    padding: @breadcrumb-padding-vertical @breadcrumb-padding-horizontal;
    + li:before {
      content: @breadcrumb-separator;
      font-size: 12px;
    }
  }
  > li a {
    color: @breadcrumb-color;
  }
}

.dropdown-menu {
  padding: 0px 1px;
  border: 1px solid @dropdown-border;
  border-radius: @border-radius-base;
  min-width: 0;
  .box-shadow(0 6px 12px rgba(0, 0, 0, .275));

  > li {
    border-bottom: 1px solid @gray-lighter;
  }
  & > li:last-child > a, & li:last-child {
    border-bottom: none;
    .border-bottom-radius(8px);
  }
  & > li:first-child > a, & li:first-child {
    .border-top-radius(8px);
  }

  > li > a {
    padding: 7px 15px;
  }
}

.dropdown-menu > li > a {
  &:hover,
  &:focus,
  &:active {
    text-decoration: none;
    color: @dropdown-link-hover-color;
    background-color: @dropdown-link-hover-bg;
  }
}

#my-info-dropdown-menu {
  padding: 0px 1px;
  border: 1px solid @dropdown-border;
  border-radius: @border-radius-base;
  min-width: 0;
  width: 280px;
  position: absolute;
  right: -15%;
  z-index: 1001;
  background-color: white;
  .box-shadow(0 6px 12px rgba(0, 0, 0, .275));

  & .card-selection {
    & p {
      padding-left: 15px;
      margin-bottom: 0px;
    }
    & > a {
      padding-left: 32px;
    }
    & i.fa-check {
      margin-left: -17px;
    }
    padding-left: 5px;
  }

  > li {
    border-bottom: 1px solid @gray-lighter;
    line-height: 30px;
    cursor: pointer;

    & a:not(.collapsed) {
      > .caret {
        transform: rotate(180deg);
        -ms-transform: rotate(180deg);
        -webkit-transform: rotate(180deg);
        -moz-transform: rotate(180deg);   
      }
    }

    > ul > li > a{
      text-indent: 10%;
    }
    
    & a{
      color: @text-color;
      display: block;
      width: 100%;
      height: 100%;
      padding: 7px 15px;

      & i {
        padding-top: 8px;
      }
      
      &:focus{
        text-decoration: none;
        outline: none !important;
      }

      &:hover{
        text-decoration: none;
        color: @dropdown-link-hover-color;
        background-color: @dropdown-link-hover-bg;
      }
    }
  }

  & > li:last-child > a, & li:last-child {
    border-bottom: none;
    .border-bottom-radius(8px);
  }
  & > li:first-child > a, & li:first-child {
    .border-top-radius(8px);
  }
}

// Default styling of Finna Jump menus
.jumpMenuForm {
  height: 33px;
  margin-bottom: 10px;
  & label {
    font-weight: normal;
    margin-left: 10px;
  }
}
.jump-menu-style {
  padding: 0;
  position: relative;
  width: auto;
  z-index: 1;
  display: inline-block;
  min-width: 60px;
  & select {
    background-color: transparent;
    border: 0 none;
    box-shadow: none;
    display: block;
    font-size: 100%;
    font-weight: 600;
    line-height: 1em;
    margin: 0;
    width: 100%;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    &:focus {
      outline: none;
      box-shadow: none;
    }
  }
  & option {
    background: @body-bg;
    color: @gray;
    padding: 5px;
    &:hover {
      background-color: @gray-light;
    }
  }

  &:before {
    display: block;
    font-size: 1em;
    height: 100%;
    padding: 0 20px 0px 2px;
    position: absolute;
    top: 0;
    right: 0px;
    text-align: center;
    width: 1em;
    z-index: -1;
  }
  &.controls {
    border-radius: @finna-button-radius;
    background-color: @brand-primary;
    padding-top: 0px;
    transition: background-color .1s linear;
    & option:checked {
      background: @btn-primary-bg;
      color: @body-bg;
    }
  }
  &.controls:before {
    transition: background-color .1s linear;
    background: @btn-primary-bg;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    color: @body-bg;
    line-height: 40px;
  }
  &.disabled {
    .opacity(0.5);
  }
}
.jump-menu-style select::-ms-expand {
  display: none; /* to ie 10 */
}
:-moz-any(.prefilter-select,.jump-menu-style.controls):before {
  background-color:  @body-bg; /* this is necessary for overcome the caret default browser */
  pointer-events: none; /* https://developer.mozilla.org/en-US/docs/Web/CSS/pointer-events  */
  z-index: 1; /* this is necessary for overcome the pseudo element */
}

.navbar-nav.lang {
  line-height: 64px;
}
.navbar-nav.nav-login {
  border-top: 1px solid @gray-lighter;
  display: none;
  line-height: 64px;
  text-align: center;
}
/* ... */

